	can be used. This is for example nloptr.
	* The nloptr package is a new dependence.
	* Starting values are now chosen using the same optimizer defined by the user.
	* Solved bug for qdist_Uni().
	* Some numerical underflow problems are now solved.
	* New distribution: Negative Binomial.
	* New distribution: Skellam.
	* New lower bound for degree of freedom is 2.01. Before was 4.0.
	* Additional argument Compute.SE for UniGASFit, MultiGASFit, UniGASRoll, MultiGASRoll.
2017-06-12
  * DESCRIPTION (Version): New version is 0.2.1.
  * Bug in MultiGASRoll()
2017-01-07
  * Bug in rmvt_mat(), the mean of the distribution was misspecified.
2017-05-07
  * New distribution: Genrealized Hyperbolic Skew Student's t
2017-10-07
  * DESCRIPTION (Version): New version is 0.2.2.
  * Bug in the visualization of uGASSim and mGASSim objects, instead of
  the B matrix the A matrix was shown.
2017-18-07
  * DESCRIPTION (Version): New version is 0.2.3.
2017-21-07
  * Added warning if the optimizer does not converge.
2017-23-07
  * DESCRIPTION (Version): New version is 0.2.4.
  * ghskt distribution removed. This will be insered in a future release.
2017-07-09
  * DESCRIPTION (Version): New version is 0.2.5.
  * DQ test now also includes one lagged value of y^2 with other regressors.
2017-10-20
  * Bug: "recipe for target `Moments.o' failed" present with some compiler has been
  solved.
2017-11-16
  * Bugs fixed related to R CMD check --test-dir=inst/ExtensionTests and R CMD check run-dontrun
2017-11-16
  * DESCRIPTION (Version): New version is 0.2.6.
  * Bug fix when Dist = "mvnorm"
2018-04-12
  * DESCRIPTION (Version): New version is 0.2.7.
  * New dependence from cubature.
  * New method ES is defined for objects of the class uGASFit, uGASSim, uGASRoll, and uGASFor.
2018-05-22
  * DESCRIPTION (Version): New version is 0.2.8.
  * Bug fix for CRPS evaluation: labels for left and right tails were switched.
  * Bug fix in iidTest for PIT