@@ -85,3 +85,6 @@
   * DESCRIPTION (Version): New version is 0.2.8.
   * Bug fix for CRPS evaluation: labels for left and right tails were switched.
   * Bug fix in iidTest for PIT
+2018-09-18
+  * DESCRIPTION (Version): New version is 0.2.9.
+  * Moving towards STRICT_R_HEADERS by default
